--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,9 @@ p {
 .App {
   background-color: var(--bg-color);
   text-align: center;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   width: 99vw;
 }
 
