--- a/src/Auth.css
+++ b/src/Auth.css
@@ -8,7 +8,7 @@ div {
 }
 
 .auth-container iframe {
-  height: 60vh;
+  height: 65vh;
   width: 99vw;
   border: none;
 }
